@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## 3.8.4 2024-08-14
 ### Added
 - Button to register from activities if registration is open
+- Intelligent phone number search in users view
 
 ### Fixed
 - Display of dates in invoices and registered activities lists
